--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
           args: deploy
         env:
          
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: AKIAZIMZWJU7HTJDXTVP
+          AWS_SECRET_ACCESS_KEY: "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"
